--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
-Django~=1.11.19
-Pillow~=4.3.0
-chardet~=2.2.1
-colorama~=0.2.5
-django-forms-bootstrap~=3.1.0
-docutils~=0.14
-gunicorn~=19.7.1
-html5lib~=0.999
-jmespath~=0.9.3
-olefile~=0.44
-psycopg2~=2.7.3.1
-pycurl~=7.19.3
-python-dateutil~=2.6.1
-pytz~=2017.2
-requests~=2.20
-six~=1.5.2
-stripe~=1.70.0
-urllib3~=1.23
-wheel~=0.24.0
+astroid==1.6.6
+awscli==1.16.218
+botocore==1.12.208
+colorama==0.3.9
+Django==1.11.17
+docutils==0.14
+ikp3db==1.1.4
+isort==4.3.21
+jedi==0.11.1
+jmespath==0.9.4
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+parso==0.1.1
+pbr==5.4.2
+pyasn1==0.4.6
+pylint==1.8.1
+pylint-django==0.8.0
+pylint-flask==0.5
+pylint-plugin-utils==0.5
+python-dateutil==2.8.0
+pytz==2019.2
+PyYAML==5.1
+rsa==3.4.2
+s3transfer==0.2.1
+six==1.12.0
+stevedore==1.30.1
+urllib3==1.25.3
+virtualenv==16.2.0
+virtualenv-clone==0.5.3
+virtualenvwrapper==4.8.4
+wrapt==1.11.2
